[gd_scene load_steps=4 format=3 uid="uid://c8dpceh8gf0mo"]

[ext_resource type="Theme" uid="uid://bbdvh3qc5ymts" path="res://resources/blueprint.tres" id="1_588ws"]
[ext_resource type="Script" path="res://ui/machine_inventory_icon.gd" id="1_ic2gi"]
[ext_resource type="StyleBox" uid="uid://bnhcwxhd2hlsi" path="res://resources/material_icon_background.tres" id="2_6etg1"]

[node name="MachineIcon" type="AspectRatioContainer"]
custom_minimum_size = Vector2(185, 300)
offset_right = 40.0
offset_bottom = 40.0
ratio = 0.618
script = ExtResource("1_ic2gi")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_588ws")
theme_override_styles/panel = ExtResource("2_6etg1")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="MachineNameLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Machine Name"
horizontal_alignment = 1

[node name="MachineDescriptionLabel" type="Label" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 14
text = "Here goes a longer description of what the machine does and how to use it. But not too large."
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Background/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PlaceButton" type="Button" parent="Background/MarginContainer/VBoxContainer/MarginContainer2"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4
text = "Place"

[node name="PlaceInstructions" type="Label" parent="Background/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 12
text = "Must be placed in a mine"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
